--- a/.github/workflows/django-ci-cd.yml
+++ b/.github/workflows/django-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Django CI/CD Pipeline
+name: Django CI/CD
 
 on:
   push:
@@ -7,39 +7,51 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run migrations
-      run: python manage.py migrate
+    - name: Run Tests
+      run: |
+        python manage.py test
 
-    - name: Run tests
-      run: python manage.py test
+    # Add additional steps for linting, migrations, etc.
 
   deploy:
-    needs: test
     runs-on: ubuntu-latest
+    needs: build
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Deploy to PythonAnywhere
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+
+    - name: Install Dependencies
       run: |
-        pip install pythonanywhere
-        pa_autoconfigure_django.py --python=3.8 --branch=main --username=KeViZi --token=<PA_API_TOKEN>
-      env:
-        PA_API_TOKEN: ${{ secrets.PYTHONANYWHERE_API_TOKEN }}
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Deploy to Server
+      run: |
+        # Your deployment script goes here
+        # This could be SSH, FTP, or any cloud provider CLI commands
+
+    # Add steps for deployment like setting environment variables,
+    # configuring the server, etc.
